# Egraph-MLIR

./: README.md
IR2expr3/include/: graph.hpp  parser.hpp  utilities.hpp
IR2expr3/mlir_source/: gemm_new1.mlir
Rust/: Cargo.toml  graph.dot  output.txt  output1.txt  output111.txt
Rust/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Rust/.vscode 2/: launch.json
Rust/mlir_source/covariance/: covariance.mlir
Rust/mlir_source/gemm/: (func_func_none "%arg0" "%arg1" "%arg2" "%arg3" (b  gemm  gemm.c  gemm.mlir  unrolled.mlir
Rust/mlir_source/mlir_output/: covariance.txt  covariance_update.mlir  gemm_update.mlir  new.txt
Rust/python_language_parser/: language.ipynb  language.txt  language_enum.txt
Rust/src/: language.rs  lib.rs  main.rs
cpp_parser/: EGG2MLIR.cpp  MLIR2EGG.cpp  gemm.txt  main.cpp  mlir_parser  mlir_parser_binary  output.txt  output_test.txt  runner.sh
cpp_parser/include/: graph.hpp  parser.hpp  reverter.hpp  utilities.hpp
cpp_parser/mlir/gemm/: gemm.mlir  new.mlir
cpp_parser/mlir/mlir_source/: 3mm.mlir  gemm_new.mlir  gemm_old.mlir  output.txt
cpp_parser/mlir_output/: covariance_update.mlir  gemm.txt  jacobi_2d.txt  jacobi_2d_update.mlir  lu.txt  lu_update.mlir  new_update.mlir
cpp_parser/mlir_source/: gemm_new.mlir  gemm_new2.mlir  gemm_old.mlir
