[package]
name = "Mlir_Egg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

egg = "0.9.5"
regex = "1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "Parser"  # You can name this whatever you like
path = "src/main.rs"
