[package]
name = "Mlir_Egg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

egg = "0.9.5"
regex = "1"

[lib]
lib_path = "src/lib.rs"
simple_language_lib = "src/language.rs"

[[bin]]
name = "Parser"  # You can name this whatever you like
path = "src/main.rs"
